# Hands-OnGenAI

./: Hands-OnLLMOPs.code-workspace  hu.ipynb  local_database.db  main.py  nl2sql.ipynb  nl2sql.py  pyproject.toml  test.py  uq.py
03-Agents/: graph.ipynb
04-Guardrails/: guardrails.ipynb
Docling/: doc.ipynb
